tests/baselines/reference/errorForUsingPropertyOfTypeAsType01.errors.txt
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(6,12): error TS2713: Cannot access 'Foo.bar' because 'Foo' is a type, but not a namespace. Did you mean to retrieve the type of the property 'bar' in 'Foo' with 'Foo["bar"]'?
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(7,18): error TS2694: Namespace 'Test1' has no exported member 'Foo'.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(15,12): error TS2503: Cannot find namespace 'Foo'.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(16,18): error TS2694: Namespace 'Test2' has no exported member 'Foo'.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(24,12): error TS2713: Cannot access 'Foo.bar' because 'Foo' is a type, but not a namespace. Did you mean to retrieve the type of the property 'bar' in 'Foo' with 'Foo["bar"]'?
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(25,18): error TS2694: Namespace 'Test3' has no exported member 'Foo'.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(32,12): error TS2713: Cannot access 'Foo.bar' because 'Foo' is a type, but not a namespace. Did you mean to retrieve the type of the property 'bar' in 'Foo' with 'Foo["bar"]'?
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(33,18): error TS2694: Namespace 'Test4' has no exported member 'Foo'.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(40,12): error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(41,18): error TS2694: Namespace 'Test5' has no exported member 'Foo'.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(44,20): error TS2694: Namespace 'Test5' has no exported member 'Foo'.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(44,24): error TS1003: Identifier expected.


==== tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts (12 errors) ====
    namespace Test1 {
        export interface Foo {
            bar: string;
        }
    
        var x: Foo.bar = "";
               ~~~~~~~
!!! error TS2713: Cannot access 'Foo.bar' because 'Foo' is a type, but not a namespace. Did you mean to retrieve the type of the property 'bar' in 'Foo' with 'Foo["bar"]'?
        var y: Test1.Foo.bar = "";
                     ~~~
!!! error TS2694: Namespace 'Test1' has no exported member 'Foo'.
    }
    
    namespace Test2 {
        export class Foo {
            bar: string;
        }
    
        var x: Foo.bar = "";
               ~~~
!!! error TS2503: Cannot find namespace 'Foo'.
        var y: Test2.Foo.bar = "";
                     ~~~
!!! error TS2694: Namespace 'Test2' has no exported member 'Foo'.
    }
    
    namespace Test3 {
        export type Foo = {
            bar: string;
        }
    
        var x: Foo.bar = "";
               ~~~~~~~
!!! error TS2713: Cannot access 'Foo.bar' because 'Foo' is a type, but not a namespace. Did you mean to retrieve the type of the property 'bar' in 'Foo' with 'Foo["bar"]'?
        var y: Test3.Foo.bar = "";
                     ~~~
!!! error TS2694: Namespace 'Test3' has no exported member 'Foo'.
    }
    
    namespace Test4 {
        export type Foo = { bar: number }
                        | { bar: string }
    
        var x: Foo.bar = "";
               ~~~~~~~
!!! error TS2713: Cannot access 'Foo.bar' because 'Foo' is a type, but not a namespace. Did you mean to retrieve the type of the property 'bar' in 'Foo' with 'Foo["bar"]'?
        var y: Test4.Foo.bar = "";
                     ~~~
!!! error TS2694: Namespace 'Test4' has no exported member 'Foo'.
    }
    
    namespace Test5 {
        export type Foo = { bar: number }
                        | { wat: string }
    
        var x: Foo.bar = "";
               ~~~
!!! error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
        var y: Test5.Foo.bar = "";
                     ~~~
!!! error TS2694: Namespace 'Test5' has no exported member 'Foo'.
    }
    
    import lol = Test5.Foo.
                       ~~~
!!! error TS2694: Namespace 'Test5' has no exported member 'Foo'.
                           
!!! error TS1003: Identifier expected.